---
title: ISA-95 Part 1 — Physical / Role-based Equipment Hierarchy (as implemented)
---
erDiagram
    Site ||--o{ Area : "contains"
    Area ||--o{ ProductionLine : "contains"
    ProductionLine ||--o{ WorkCell : "contains"
    WorkCell ||--o{ Equipment : "contains"

    EquipmentClass ||--o{ Equipment : "classifies"
    EquipmentClass ||--o{ EquipmentClassProperty : "typed property spec"
    EquipmentClass ||--o{ EquipmentCapability : "capability kind"

    Equipment ||--o{ EquipmentCapability : "declares"
    EquipmentCapability ||--o{ EquipmentCapabilityProperty : "property values"
    EquipmentCapabilityProperty }o--|| EquipmentClassProperty : "conforms to"

    Equipment ||--o{ EquipmentMaterial : "loaded material"
    EquipmentMaterial }o--|| MaterialDefinition : ""
    EquipmentMaterial }o--|| UnitOfMeasure : "capacity uom"

    %% Storage lives in the site (Part 1 physical scope)
    Site ||--o{ StorageLocation : "located at"
